--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             EJS_multitap = true;
             EJS_gameName = "Indiana Jones' Greatest Adventures";
             EJS_color = "#0064ff";
-            EJS_pathtodata = "https://cdn.jsdelivr.net/gh/EmulatorJS/EmulatorJS@latest/data/";
+            EJS_pathtodata = "https://cdn.emulatorjs.org/stable/data/";
             EJS_gameUrl = "Indiana Jones' Greatest Adventures (USA).sfc";
         </script>
-        <script src="https://cdn.jsdelivr.net/gh/EmulatorJS/EmulatorJS@latest/data/loader.js"></script>
+        <script src="https://cdn.emulatorjs.org/stable/data/loader.js"></script>
     </body>
 </html>
